--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
     sdk: flutter
   dio: ^3.0.10
   flutter_swiper: ^1.1.6
+  bot_toast: ^3.0.4
+  common_utils: ^1.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
